tests/ui/const-generics/fn-const-param-call.full.stderr
error[E0741]: using function pointers as const generic parameters is forbidden
  --> $DIR/fn-const-param-call.rs:13:25
   |
LL | struct Wrapper<const F: fn() -> u32>;
   |                         ^^^^^^^^^^^

error[E0741]: using function pointers as const generic parameters is forbidden
  --> $DIR/fn-const-param-call.rs:15:15
   |
LL | impl<const F: fn() -> u32> Wrapper<F> {
   |               ^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0741`.
